// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagInput rendering renders expected elements 1`] = `
<Layer
  className="TagInput"
  id="random-id-tags"
  onClick={[Function]}
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <span
    className="TagInput__tag"
  >
    foo
    <button
      aria-label="Remove foo"
      className="TagInput__remove"
      data-index={0}
      type="button"
    >
      <Close />
    </button>
  </span>
  <span
    className="TagInput__tag"
  >
    bar
    <button
      aria-label="Remove bar"
      className="TagInput__remove"
      data-index={1}
      type="button"
    >
      <Close />
    </button>
  </span>
  <input
    aria-invalid={false}
    className="TagInput__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when disabled 1`] = `
<Layer
  className="TagInput TagInput--disabled"
  id="random-id-tags"
  onClick={[Function]}
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <span
    aria-disabled={true}
    className="TagInput__tag"
  >
    foo
    <span
      aria-disabled="true"
      className="TagInput__remove"
    >
      <Close />
    </span>
  </span>
  <span
    aria-disabled={true}
    className="TagInput__tag"
  >
    bar
    <span
      aria-disabled="true"
      className="TagInput__remove"
    >
      <Close />
    </span>
  </span>
  <input
    aria-invalid={false}
    className="TagInput__input"
    disabled={true}
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when disabled and defaultTags is set 1`] = `
<Layer
  className="TagInput TagInput--disabled"
  id="random-id-tags"
  onClick={[Function]}
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <span
    className="TagInput__defaultTag TagInput__defaultTag--disabled"
  >
    foo
  </span>
  <span
    className="TagInput__defaultTag TagInput__defaultTag--disabled"
  >
    bar
  </span>
  <input
    aria-invalid={false}
    className="TagInput__input"
    disabled={true}
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when error is set 1`] = `
<Layer
  className="TagInput TagInput--error"
  id="random-id-tags"
  onClick={[Function]}
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <span
    className="TagInput__tag"
  >
    foo
    <button
      aria-label="Remove foo"
      className="TagInput__remove"
      data-index={0}
      type="button"
    >
      <Close />
    </button>
  </span>
  <span
    className="TagInput__tag"
  >
    bar
    <button
      aria-label="Remove bar"
      className="TagInput__remove"
      data-index={1}
      type="button"
    >
      <Close />
    </button>
  </span>
  <input
    aria-invalid={true}
    className="TagInput__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when tags is empty and defaultTags is not set 1`] = `
<Layer
  className="TagInput"
  id="random-id-tags"
  onClick={[Function]}
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <input
    aria-invalid={false}
    className="TagInput__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when tags is empty and defaultTags is set 1`] = `
<Layer
  className="TagInput"
  id="random-id-tags"
  onClick={[Function]}
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <span
    className="TagInput__defaultTag"
  >
    foo
  </span>
  <span
    className="TagInput__defaultTag"
  >
    bar
  </span>
  <input
    aria-invalid={false}
    className="TagInput__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;
